--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==0.10.1
 gunicorn==19.3.0
-icalendar==3.8.4
+icalendar==3.9.1
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2==2.8
 MarkupSafe==0.23
-pytz==2014.10
-requests==2.6.0
-Werkzeug==0.10.1
+python-dateutil==2.4.2
+pytz==2015.6
+requests==2.7.0
+six==1.9.0
+Werkzeug==0.10.4
