--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+alembic==0.8.3
+cffi==1.2.1
+cryptography==1.0.2
+enum34==1.0.4
 Flask==0.10.1
+Flask-Migrate==1.6.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
 gunicorn==19.3.0
 icalendar==3.9.1
+idna==2.0
+ipaddress==1.0.14
 itsdangerous==0.24
 Jinja2==2.8
+Mako==1.0.2
 MarkupSafe==0.23
+psycopg2==2.6.1
+pyasn1==0.1.9
+pycparser==2.14
 python-dateutil==2.4.2
+python-editor==0.4
 pytz==2015.6
 requests==2.7.0
+simple-pbkdf2==1.0
 six==1.9.0
+SQLAlchemy==1.0.8
 Werkzeug==0.10.4
+WTForms==2.0.2
+WTForms-JSON==0.2.10
