--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==0.8.3
+Babel==2.1.1
 cffi==1.2.1
 cryptography==1.0.2
 enum34==1.0.4
 Flask==0.10.1
+Flask-Babel==0.9
 Flask-Migrate==1.6.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
@@ -21,10 +23,11 @@ pycparser==2.14
 python-dateutil==2.4.2
 python-editor==0.4
 pytz==2015.6
-requests==2.7.0
+requests==2.8.1
 simple-pbkdf2==1.0
-six==1.9.0
-SQLAlchemy==1.0.8
+six==1.10.0
+speaklater==1.3
+SQLAlchemy==1.0.9
 Werkzeug==0.10.4
 WTForms==2.0.2
 WTForms-JSON==0.2.10
