--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Assets==0.11
 Flask-Babel==0.9
 Flask-Migrate==1.6.0
 Flask-Script==2.0.5
+Flask-SeaSurf==0.2.1
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.12
 gunicorn==19.3.0
